# rastion

./: CONTRIBUTING.md  README.md  decisionhub  pyproject.toml  validate_dmp.py
.github/ISSUE_TEMPLATE/: break-frozen-execution-contract.md
.github/workflows/: ci.yml
anchor-proof/: README.md
anchor-proof/benchmarks/results/: instance_01.json
anchor-proof/dmp/: decision_card.md  instance_schema.json  model.py
core/rastion/: cli.py
core/rastion/decision_model_package/: README.md  runner.py
docs/: BREAK_RASTION.md  DMP_BADGE.md  DMP_v0.1.md  authoring-checklist.md  authoring_a_dmp.md  benchmarking-convention.md  conventions.md  create-your-first-dmp.md  dmp_v0.1_freeze_memo.md  why-dmp.md
examples/jssp_basic/: decision_card.md  evaluate.py  instance.json  instance_schema.json  model.py  solver.yaml
examples/knapsack_basic/: instance_schema.json
examples/set_cover_basic/: decision_card.md  evaluate.py  instance.json  instance_schema.json  model.py
scripts/: check_dmp.sh  new_dmp.sh
spec/: decision_model_package_v0.1.md
src/: App.tsx  index.css
src/components/: DmpBadge.tsx
src/data/: packages.ts
src/lib/: dmp-examples.ts
src/pages/: CLI.tsx  Concept.tsx  Contribute.tsx  Docs.tsx  Examples.tsx  GetStarted.tsx  Index.tsx  PackageDetail.tsx  Packages.tsx
templates/minimal-dmp/: README.md  decision_card.md  evaluate.py  instance_schema.json  model.py  solver.yaml
tools/: decisionhub.py
tools/decision_model_package/: README.md  runner.py  validate_package.py
website/: tailwind.config.ts
website/src/: App.tsx  index.css
(+43 files in other folders)
